export const snapshot = {};

snapshot[`Team States Command - Help Text 1`] = `
stdout:
"
Usage: states [team]

Description:

  List workflow states for a team (by key, name, or ID)

Options:

  -h, --help  - Show this help.  
  -j, --json  - Output as JSON   

"
stderr:
""
`;

snapshot[`Team States Command - Table 1`] = `
stdout:
"NAME        TYPE     
Triage      triage   
In Review   started  
In Progress started  
Todo        unstarted
Backlog     backlog  
Done        completed
Rejected    canceled 
Duplicate   duplicate
"
stderr:
""
`;

snapshot[`Team States Command - JSON 1`] = `
stdout:
'{
  "nodes": [
    {
      "id": "s-triage",
      "name": "Triage",
      "type": "triage",
      "position": 900
    },
    {
      "id": "s-review",
      "name": "In Review",
      "type": "started",
      "position": 1002
    },
    {
      "id": "s-progress",
      "name": "In Progress",
      "type": "started",
      "position": 2
    },
    {
      "id": "s-todo",
      "name": "Todo",
      "type": "unstarted",
      "position": 1
    },
    {
      "id": "s-backlog",
      "name": "Backlog",
      "type": "backlog",
      "position": 0
    },
    {
      "id": "s-done",
      "name": "Done",
      "type": "completed",
      "position": 3
    },
    {
      "id": "s-rejected",
      "name": "Rejected",
      "type": "canceled",
      "position": 0.5
    },
    {
      "id": "s-dupe",
      "name": "Duplicate",
      "type": "duplicate",
      "position": 5
    }
  ]
}
'
stderr:
""
`;

snapshot[`Team States Command - Configured Team Fallback 1`] = `
stdout:
"NAME        TYPE     
Triage      triage   
In Review   started  
In Progress started  
Todo        unstarted
Backlog     backlog  
Done        completed
Rejected    canceled 
Duplicate   duplicate
"
stderr:
""
`;

snapshot[`Team States Command - Empty 1`] = `
stdout:
"No workflow states found for this team.
"
stderr:
""
`;

snapshot[`Team States Command - Empty JSON 1`] = `
stdout:
'{
  "nodes": []
}
'
stderr:
""
`;

snapshot[`Team States Command - No Team Configured 1`] = `
stdout:
""
stderr:
"✗ Failed to fetch workflow states: Could not determine team key from directory name
  Please specify a team key, name, or ID as an argument.
"
`;

snapshot[`Team States Command - By Team Name 1`] = `
stdout:
'{
  "nodes": [
    {
      "id": "s-triage",
      "name": "Triage",
      "type": "triage",
      "position": 900
    },
    {
      "id": "s-review",
      "name": "In Review",
      "type": "started",
      "position": 1002
    },
    {
      "id": "s-progress",
      "name": "In Progress",
      "type": "started",
      "position": 2
    },
    {
      "id": "s-todo",
      "name": "Todo",
      "type": "unstarted",
      "position": 1
    },
    {
      "id": "s-backlog",
      "name": "Backlog",
      "type": "backlog",
      "position": 0
    },
    {
      "id": "s-done",
      "name": "Done",
      "type": "completed",
      "position": 3
    },
    {
      "id": "s-rejected",
      "name": "Rejected",
      "type": "canceled",
      "position": 0.5
    },
    {
      "id": "s-dupe",
      "name": "Duplicate",
      "type": "duplicate",
      "position": 5
    }
  ]
}
'
stderr:
""
`;

snapshot[`Team States Command - Unknown Team Lists Keys 1`] = `
stdout:
""
stderr:
"✗ Failed to fetch workflow states: Team not found: Nope
  Valid team keys: APP (Apps), ENG (Engineering). Run \`linear team list\` to see all teams.
"
`;
